fix(search-input): show search button on mobile layout

--- a/src/components/common/SearchInput/search-input.scss
+++ b/src/components/common/SearchInput/search-input.scss
@@ -52,10 +52,6 @@
   }
 
   [data-store-button] {
-    .search-icon-desktop {
-      display: none;
-    }
-
     .search-icon-mobile {
       display: inline-block;
     }
